--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
     "@types/react-dom": "^18.3.0",
     "@ya.praktikum/react-developer-burger-ui-components": "^1.14.0",
     "react": "^18.3.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
+    "react-redux": "^7.2.9",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
