--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "cypress:open": "./node_modules/.bin/cypress open"
   },
   "eslintConfig": {
     "extends": [
@@ -48,10 +49,13 @@
     ]
   },
   "devDependencies": {
+    "@4tw/cypress-drag-drop": "^2.2.5",
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.13",
     "craco": "^0.0.3",
     "craco-alias": "^3.0.1",
+    "cypress": "^13.15.0",
+    "eslint-plugin-cypress": "^3.5.0",
     "fetch-mock": "^11.1.5",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5"
